corrected alignement for smartphone

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -143,7 +143,7 @@ body {
     margin-bottom:2vh;
   }
 
-  .informations-texte {
+  .informations__texte {
     text-align:center;
     margin-top:3vh;
   }
